[redhat] kernel-automotive-5.14.0-144.106.el9iv
Signed-off-by: Julio Faracco <jfaracco@redhat.com>

--- a/redhat/kernel-automotive.changelog-9.1
+++ b/redhat/kernel-automotive.changelog-9.1
@@ -1,3 +1,52 @@
+* Thu Aug 11 2022 Julio Faracco <jfaracco@redhat.com> [5.14.0-144.106.el9iv]
+- [automotive] build kernel-automotive-5.14.0-144.106.el9iv
+- [redhat-rt] kernel-rt: disable KGDB in the production and development variants (Luis Claudio R. Goncalves) [2115042]
+- dm raid: fix address sanitizer warning in raid_resume (Benjamin Marzinski) [2115117]
+- dm raid: fix address sanitizer warning in raid_status (Benjamin Marzinski) [2115117]
+- dm: return early from dm_pr_call() if DM device is suspended (Benjamin Marzinski) [2115117]
+- dm thin: fix use-after-free crash in dm_sm_register_threshold_callback (Benjamin Marzinski) [2115117]
+- dm writecache: count number of blocks discarded, not number of discard bios (Benjamin Marzinski) [2115117]
+- dm writecache: count number of blocks written, not number of write bios (Benjamin Marzinski) [2115117]
+- dm writecache: count number of blocks read, not number of read bios (Benjamin Marzinski) [2115117]
+- dm writecache: return void from functions (Benjamin Marzinski) [2115117]
+- dm kcopyd: use __GFP_HIGHMEM when allocating pages (Benjamin Marzinski) [2115117]
+- dm writecache: set a default MAX_WRITEBACK_JOBS (Benjamin Marzinski) [2115117]
+- dm raid: fix KASAN warning in raid5_add_disks (Benjamin Marzinski) [2115117]
+- dm raid: fix KASAN warning in raid5_remove_disk (Benjamin Marzinski) [2115117]
+- NFS: Fix initialisation of nfs_client cl_flags field (Scott Mayhew) [2114872]
+- ipmi: When handling send message responses, don't process the message (Tony Camuso) [2102319]
+- net: ena: Do not waste napi skb cache (Michal Schmidt) [2097646]
+- opp: Don't print an error if required-opps is missing (Mark Salter) [2112431]
+- scsi: smartpqi: Update version to 2.1.18-045 (Don Brace) [2101544]
+- scsi: smartpqi: Update copyright to current year (Don Brace) [2101544]
+- scsi: smartpqi: Add ctrl ready timeout module parameter (Don Brace) [2101544]
+- scsi: smartpqi: Update deleting a LUN via sysfs (Don Brace) [2101544]
+- scsi: smartpqi: Add module param to disable managed ints (Don Brace) [2101544]
+- scsi: smartpqi: Fix RAID map race condition (Don Brace) [2101544]
+- scsi: smartpqi: Fix DMA direction for RAID requests (Don Brace) [2101544]
+- scsi: smartpqi: Stop logging spurious PQI reset failures (Don Brace) [2101544]
+- scsi: smartpqi: Add PCI IDs for Lenovo controllers (Don Brace) [2101544]
+- scsi: smartpqi: Add PCI ID for Adaptec SmartHBA 2100-8i (Don Brace) [2101544]
+- scsi: smartpqi: Fix PCI control linkdown system hang (Don Brace) [2101544]
+- scsi: smartpqi: Add driver support for multi-LUN devices (Don Brace) [2101544]
+- scsi: smartpqi: Close write read holes (Don Brace) [2101544]
+- scsi: smartpqi: Add PCI IDs for ramaxel controllers (Don Brace) [2101544]
+- scsi: smartpqi: Add controller fw version to console log (Don Brace) [2101544]
+- scsi: smartpqi: Shorten drive visibility after removal (Don Brace) [2101544]
+- scsi: smartpqi: Fix typo in comment (Don Brace) [2101544]
+- xfs: fix maxlevels comparisons in the btree staging code (Andrey Albershteyn) [2106569]
+- xfs: use kmem_cache_free() for kmem_cache objects (Andrey Albershteyn) [2106569]
+- xfs: fix incorrect unit conversion in scrub tracepoint (Andrey Albershteyn) [2106569]
+- xfs: reserve quota for dir expansion when linking/unlinking files (Andrey Albershteyn) [2106569]
+- xfs: fix xfs_ifree() error handling to not leak perag ref (Andrey Albershteyn) [2106569]
+- xfs: reorder iunlink remove operation in xfs_ifree (Andrey Albershteyn) [2106569]
+- xfs: don't generate selinux audit messages for capability testing (Andrey Albershteyn) [2106569]
+- scsi: qla2xxx: Fix imbalance vha->vref_count (Nilesh Javali) [2109000]
+- ext4: make sure ext4_append() always allocates new block (Lukas Czerner) [2070213]
+- ext4: check if directory block is within i_size (Lukas Czerner) [2070213]
+- redhat/configs: automotive: Remove CONFIG_QCOM_IOMMU (Andrew Halaney)
+Resolves: rhbz#2061574, rhbz#2061574, rhbz#2115042, rhbz#2115117, rhbz#2114872, rhbz#2102319, rhbz#2097646, rhbz#2112431, rhbz#2101544, rhbz#2106569, rhbz#2109000, rhbz#2070213
+
 * Wed Aug 10 2022 Julio Faracco <jfaracco@redhat.com> [5.14.0-143.105.el9iv]
 - [automotive] build kernel-automotive-5.14.0-143.105.el9iv
 - sched, cpuset: Fix dl_cpu_busy() panic due to empty cs->cpus_allowed (Waiman Long) [2104946]
