--- a/docs/general_build_instructions.adoc
+++ b/docs/general_build_instructions.adoc
@@ -25,6 +25,20 @@ cp redhat/configs/<version-arch>.config .config
 
 Older RHEL repositories may use rh-* in place of dist-* in make commands.
 
+== Brew build instructions
+
+In general, users can submit an MR and use the CKI build artifacts.  In cases where a brew build is required, a build for all supported architectures can be completed by executing
+
+----
+make dist-brew
+----
+
+Specific architectures can be built by setting the BREW_FLAGS variable.  For example, to build the x86_64 and noarch architectures,
+
+----
+make dist-brew BREW_FLAGS="--arch-override=x86_64,noarch"
+----
+
 == Command Help
 
 Help for additional RHEL make commands can be viewed by executing “make dist-help”.
