[redhat] kernel-5.14.0-146.el9
Signed-off-by: Herton R. Krzesinski <herton@redhat.com>

--- a/redhat/kernel.changelog-9.1
+++ b/redhat/kernel.changelog-9.1
@@ -1,3 +1,57 @@
+* Tue Aug 16 2022 Herton R. Krzesinski <herton@redhat.com> [5.14.0-146.el9]
+- cpufreq: fix memory leak in sun50i_cpufreq_nvmem_probe (Mark Langsdorf) [2072976]
+- cpufreq: powernow-k8: Re-order the init checks (Mark Langsdorf) [2072976]
+- cpufreq: amd-pstate: Add more tracepoint for AMD P-State module (Mark Langsdorf) [2072976]
+- cpufreq: CPPC: Fix performance/frequency conversion (Mark Langsdorf) [2072976]
+- cpufreq: unify show() and store() naming and use __ATTR_XX (Mark Langsdorf) [2072976]
+- cpufreq: longhaul: Replace acpi_bus_get_device() (Mark Langsdorf) [2072976]
+- cpufreq: Move to_gov_attr_set() to cpufreq.h (Mark Langsdorf) [2072976]
+- cpufreq: use default_groups in kobj_type (Mark Langsdorf) [2072976]
+- cpufreq: Fix initialization of min and max frequency QoS requests (Mark Langsdorf) [2072976]
+- cpufreq: Fix a comment in cpufreq_policy_free (Mark Langsdorf) [2072976]
+- cpufreq: Fix get_cpu_device() failure in add_cpu_dev_symlink() (Mark Langsdorf) [2072976]
+- cpufreq: Use CPUFREQ_RELATION_E in DVFS governors (Mark Langsdorf) [2072976]
+- cpufreq: Introducing CPUFREQ_RELATION_E (Mark Langsdorf) [2072976]
+- cpufreq: Add an interface to mark inefficient frequencies (Mark Langsdorf) [2072976]
+- cpufreq: Make policy min/max hard requirements (Mark Langsdorf) [2072976]
+- PM: EM: Allow skipping inefficient states (Mark Langsdorf) [2072976]
+- PM: EM: Extend em_perf_domain with a flag field (Mark Langsdorf) [2072976]
+- PM: EM: Mark inefficient states (Mark Langsdorf) [2072976]
+- PM: EM: Fix inefficient states detection (Mark Langsdorf) [2072976]
+- PM: EM: Increase energy calculation precision (Mark Langsdorf) [2072976]
+- cpufreq: tegra186/tegra194: Handle errors in BPMP response (Mark Langsdorf) [2072976]
+- cpufreq: remove useless INIT_LIST_HEAD() (Mark Langsdorf) [2072976]
+- cpufreq: s3c244x: add fallthrough comments for switch (Mark Langsdorf) [2072976]
+- cpufreq: vexpress: Drop unused variable (Mark Langsdorf) [2072976]
+- qede: Reduce verbosity of ptp tx timestamp (Manish Chopra) [2080656]
+- redhat/configs: Enable Marvell OcteonTX2 crypto device (Vladis Dronov) [2042239]
+- hwrng: cn10k - Enable compile testing (Vladis Dronov) [2042239]
+- hwrng: cn10k - Make check_rng_health() return an error code (Vladis Dronov) [2042239]
+- hwrng: cn10k - Optimize cn10k_rng_read() (Vladis Dronov) [2042239]
+- hwrng: cn10k - Add random number generator support (Vladis Dronov) [2042239]
+- hwrng: cavium - fix NULL but dereferenced coccicheck error (Vladis Dronov) [2042261]
+- hwrng: cavium - HW_RANDOM_CAVIUM should depend on ARCH_THUNDER (Vladis Dronov) [2042261]
+- hwrng: cavium - Check health status while reading random data (Vladis Dronov) [2042261]
+- crypto: octeontx2 - fix potential null pointer access (Vladis Dronov) [2041740]
+- crypto: octeontx2 - add firmware version in devlink info (Vladis Dronov) [2041740]
+- crypto: octeontx2 - simplify the return expression of otx2_cpt_aead_cbc_aes_sha_setkey() (Vladis Dronov) [2041740]
+- crypto: octeontx2 - fix missing unlock (Vladis Dronov) [2041740]
+- crypto: octeontx2 - add synchronization between mailbox accesses (Vladis Dronov) [2041740]
+- crypto: octeontx2 - remove CONFIG_DM_CRYPT check (Vladis Dronov) [2041740]
+- crypto: octeontx2 - increase CPT HW instruction queue length (Vladis Dronov) [2041740]
+- crypto: octeontx2 - disable DMA black hole on an DMA fault (Vladis Dronov) [2041740]
+- crypto: octeontx2 - CN10K CPT to RNM workaround (Vladis Dronov) [2041740]
+- crypto: octeontx2 - Avoid stack variable overflow (Vladis Dronov) [2041740]
+- crypto: octeontx2 - prevent underflow in get_cores_bmap() (Vladis Dronov) [2041740]
+- crypto: octeontx2 - out of bounds access in otx2_cpt_dl_custom_egrp_delete() (Vladis Dronov) [2041740]
+- crypto: octeontx2 - Use swap() instead of swap_engines() (Vladis Dronov) [2041740]
+- crypto: octeontx2 - parameters for custom engine groups (Vladis Dronov) [2041740]
+- crypto: octeontx2 - add apis for custom engine groups (Vladis Dronov) [2041740]
+- crypto: octeontx2 - uninitialized variable in kvf_limits_store() (Vladis Dronov) [2041740]
+- crypto: octeontx2 - use swap() to make code cleaner (Vladis Dronov) [2041740]
+- crypto: octeontx2 - set assoclen in aead_do_fallback() (Vladis Dronov) [2041740]
+Resolves: rhbz#2072976, rhbz#2080656, rhbz#2042239, rhbz#2042261, rhbz#2041740
+
 * Wed Aug 10 2022 Jan Stancek <jstancek@redhat.com> [5.14.0-145.el9]
 - KVM: x86: do not report preemption if the steal time cache is stale (Vitaly Kuznetsov) [2115238]
 - KVM: x86: revalidate steal time cache if MSR value changes (Vitaly Kuznetsov) [2115238]
