[redhat] kernel-rt-5.14.0-148.rt21.148.el9
Bugzilla: 2061574
Signed-off-by: Luis Claudio R. Goncalves <lgoncalv@redhat.com>

--- a/redhat/kernel-rt.changelog-9.1
+++ b/redhat/kernel-rt.changelog-9.1
@@ -1,3 +1,47 @@
+* Fri Aug 19 2022 Luis Claudio R. Goncalves <lgoncalv@redhat.com> [5.14.0-148.rt21.148.el9]
+- [rt] build kernel-rt-5.14.0-148.rt21.148.el9 [2061574]
+- arm64/sve: update sve_state variable (Scott Weaver) [2104174]
+- lockdown: also lock down previous kgdb use (Lenny Szubowicz) [2104751] {CVE-2022-21499}
+- perf build: Stop using __weak bpf_object__next_map() to handle older libbpf versions (Michael Petlan) [2102240]
+- perf build: Stop using __weak bpf_object__next_program() to handle older libbpf versions (Michael Petlan) [2102240]
+- scsi: qla2xxx: Fix erroneous mailbox timeout after PCI error injection (Nilesh Javali) [2106623]
+- vhost-vdpa: call vhost_vdpa_cleanup during the release (Eugenio Pérez) [1939367]
+- vdpasim: Off by one in vdpasim_set_group_asid() (Eugenio Pérez) [1939367]
+- vdpasim: allow to enable a vq repeatedly (Eugenio Pérez) [1939367]
+- vdpasim: control virtqueue support (Eugenio Pérez) [1939367]
+- vdpa_sim: filter destination mac address (Eugenio Pérez) [1939367]
+- vdpa_sim: factor out buffer completion logic (Eugenio Pérez) [1939367]
+- vdpa_sim: advertise VIRTIO_NET_F_MTU (Eugenio Pérez) [1939367]
+- vhost-vdpa: support ASID based IOTLB API (Eugenio Pérez) [1939367]
+- vhost-vdpa: introduce uAPI to set group ASID (Eugenio Pérez) [1939367]
+- vhost-vdpa: uAPI to get virtqueue group id (Eugenio Pérez) [1939367]
+- vhost-vdpa: introduce uAPI to get the number of address spaces (Eugenio Pérez) [1939367]
+- vhost-vdpa: introduce uAPI to get the number of virtqueue groups (Eugenio Pérez) [1939367]
+- vhost-vdpa: introduce asid based IOTLB (Eugenio Pérez) [1939367]
+- vhost: support ASID in IOTLB API (Eugenio Pérez) [1939367]
+- vhost_iotlb: split out IOTLB initialization (Eugenio Pérez) [1939367]
+- vdpa: introduce config operations for associating ASID to a virtqueue group (Eugenio Pérez) [1939367]
+- vdpa: multiple address spaces support (Eugenio Pérez) [1939367]
+- vdpa: introduce virtqueue groups (Eugenio Pérez) [1939367]
+- vhost-vdpa: switch to use vhost-vdpa specific IOTLB (Eugenio Pérez) [1939367]
+- vhost-vdpa: passing iotlb to IOMMU mapping helpers (Eugenio Pérez) [1939367]
+- virtio-vdpa: don't set callback if virtio doesn't need it (Eugenio Pérez) [1939367]
+- vhost: move the backend feature bits to vhost_types.h (Eugenio Pérez) [1939367]
+- fs: dlm: change posix lock sigint handling (Alexander Aring) [2088518]
+- fs: dlm: use dlm_plock_info for do_unlock_close (Alexander Aring) [2088518]
+- fs: dlm: change plock interrupted message to debug again (Alexander Aring) [2088518]
+- fs: dlm: add pid to debug log (Alexander Aring) [2088518]
+- fs: dlm: plock use list_first_entry (Alexander Aring) [2088518]
+- dlm: replace usage of found with dedicated list iterator variable (Alexander Aring) [2088518]
+- dlm: move global to static inits (Alexander Aring) [2088518]
+- dlm: remove unnecessary INIT_LIST_HEAD() (Alexander Aring) [2088518]
+- dlm: improve plock logging if interrupted (Alexander Aring) [2088518]
+- dlm: rearrange async condition return (Alexander Aring) [2088518]
+- dlm: cleanup plock_op vs plock_xop (Alexander Aring) [2088518]
+- dlm: replace sanity checks with WARN_ON (Alexander Aring) [2088518]
+- fs: dlm: make dlm_callback_resume quite (Alexander Aring) [2009423]
+Resolves: rhbz#2061574, rhbz#2104751, rhbz#2104174
+
 * Thu Aug 18 2022 Luis Claudio R. Goncalves <lgoncalv@redhat.com> [5.14.0-147.rt21.147.el9]
 - [rt] build kernel-rt-5.14.0-147.rt21.147.el9 [2061574]
 - RedHat: ASoC: SOF: Intel: do not enable IMR boot when resuming by default (Jaroslav Kysela) [2065578]
