[redhat] kernel-rt-5.14.0-149.rt21.149.el9
Bugzilla: 2061574
Signed-off-by: Luis Claudio R. Goncalves <lgoncalv@redhat.com>

--- a/redhat/kernel-rt.changelog-9.1
+++ b/redhat/kernel-rt.changelog-9.1
@@ -1,3 +1,54 @@
+* Sat Aug 20 2022 Luis Claudio R. Goncalves <lgoncalv@redhat.com> [5.14.0-149.rt21.149.el9]
+- [rt] build kernel-rt-5.14.0-149.rt21.149.el9 [2061574]
+- netfilter: h323: merge nat hook pointers into one (Florian Westphal) [2111270]
+- netfilter: nf_conntrack: use rcu accessors where needed (Florian Westphal) [2111270]
+- netfilter: nf_conntrack: add missing __rcu annotations (Florian Westphal) [2111270]
+- netfilter: conntrack: use correct format characters (Florian Westphal) [2111270]
+- netfilter: conntrack: use fallthrough to cleanup (Florian Westphal) [2111270]
+- netfilter: ctnetlink: fix up for "netfilter: conntrack: remove unconfirmed list" (Florian Westphal) [2111270]
+- netfilter: cttimeout: fix slab-out-of-bounds read typo in cttimeout_net_exit (Florian Westphal) [2111270]
+- netfilter: cttimeout: fix slab-out-of-bounds read in cttimeout_net_exit (Florian Westphal) [2111270]
+- netfilter: nfnetlink: fix warn in nfnetlink_unbind (Florian Westphal) [2111270]
+- netfilter: conntrack: remove pr_debug callsites from tcp tracker (Florian Westphal) [2111270]
+- netfilter: prefer extension check to pointer check (Florian Westphal) [2111270]
+- netfilter: conntrack: add nf_conntrack_events autodetect mode (Florian Westphal) [2111270]
+- netfilter: conntrack: un-inline nf_ct_ecache_ext_add (Florian Westphal) [2111270]
+- netfilter: conntrack: add nf_ct_iter_data object for nf_ct_iterate_cleanup*() (Florian Westphal) [2111270]
+- netfilter: nfnetlink: allow to detect if ctnetlink listeners exist (Florian Westphal) [2111270]
+- netfilter: conntrack: avoid unconditional local_bh_disable (Florian Westphal) [2111270]
+- netfilter: conntrack: remove unconfirmed list (Florian Westphal) [2111270]
+- netfilter: conntrack: remove __nf_ct_unconfirmed_destroy (Florian Westphal) [2111270]
+- netfilter: cttimeout: decouple unlink and free on netns destruction (Florian Westphal) [2111270]
+- netfilter: extensions: introduce extension genid count (Florian Westphal) [2111270]
+- netfilter: remove nf_ct_unconfirmed_destroy helper (Florian Westphal) [2111270]
+- netfilter: cttimeout: decouple unlink and free on netns destruction (Florian Westphal) [2111270]
+- netfilter: conntrack: remove the percpu dying list (Florian Westphal) [2111270]
+- netfilter: conntrack: include ecache dying list in dumps (Florian Westphal) [2111270]
+- netfilter: ecache: use dedicated list for event redelivery (Florian Westphal) [2111270]
+- netfilter: conntrack: split inner loop of list dumping to own function (Florian Westphal) [2111270]
+- netfilter: ctnetlink: remove useless type conversion to bool (Florian Westphal) [2111270]
+- netfilter: ecache: move to separate structure (Florian Westphal) [2111270]
+- netfilter: ctnetlink: use dump structure instead of raw args (Florian Westphal) [2111270]
+- netfilter: cttimeout: use option structure (Florian Westphal) [2111270]
+- netfilter: ecache: don't use nf_conn spinlock (Florian Westphal) [2111270]
+- netfilter: ecache: remove nf_exp_event_notifier structure (Florian Westphal) [2111270]
+- netfilter: ecache: prepare for event notifier merge (Florian Westphal) [2111270]
+- netfilter: ecache: add common helper for nf_conntrack_eventmask_report (Florian Westphal) [2111270]
+- netfilter: ecache: remove another indent level (Florian Westphal) [2111270]
+- netfilter: ecache: remove one indent level (Florian Westphal) [2111270]
+- netfilter: conntrack: pptp: use single option structure (Florian Westphal) [2111270]
+- netfilter: conntrack: don't refresh sctp entries in closed state (Florian Westphal) [2111270]
+- netfilter: conntrack: revisit gc autotuning (Florian Westphal) [2111270]
+- netfilter: nf_conntrack_netbios_ns: fix helper module alias (Florian Westphal) [2111270]
+- netfilter: conntrack: Remove useless assignment statements (Florian Westphal) [2111270]
+- netfilter: conntrack: Use memset_startat() to zero struct nf_conn (Florian Westphal) [2111270]
+- netfilter: ctnetlink: missing counters and timestamp in nfnetlink_{log,queue} (Florian Westphal) [2111270]
+- netfilter: ctnetlink: allow to filter dump by status bits (Florian Westphal) [2111270]
+- netfilter: ctnetlink: add and use a helper for mark parsing (Florian Westphal) [2111270]
+- netfilter: ctnetlink: remove expired entries first (Florian Westphal) [2111270]
+- net: align static siphash keys (Florian Westphal) [2111270]
+Resolves: rhbz#2061574
+
 * Fri Aug 19 2022 Luis Claudio R. Goncalves <lgoncalv@redhat.com> [5.14.0-148.rt21.148.el9]
 - [rt] build kernel-rt-5.14.0-148.rt21.148.el9 [2061574]
 - arm64/sve: update sve_state variable (Scott Weaver) [2104174]
